// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlbumItem > matches the snapshot 1`] = `
"<article class="interactionWrapper layoutItem albumItem" draggable="false">
  <div class="layoutImage albumImageWrapper">
    <figure><a class="interactionWrapperLink" draggable="false" title="Go to album album-0">
        <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </a></figure>
    <div class="hideOnListLayout actions hoverActions">
      <div class="centerItems actionsLeft"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
          <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
        </button><button class="centerItems buttonLink" draggable="false" type="button" title="Add album to queue">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add album to queue </span>
        </button></div><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
        <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
      </button>
    </div>
  </div>
  <div class="layoutContent">
    <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
    <ul class="commaList smallFont clamp2">
      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
    </ul>
  </div>
  <div class="layoutDropdownMenu hoverActions">
    <div>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Play album </span>
        </button></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Add to queue </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem" to="[object Object]"><a class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false">
          <!--v-if--><span class="clamp text"> Go to album </span>
        </a></li>
      <li class="dropdownWrapper"><button class="centerItems buttonLink alignRight centerAll fullWidth spaceBetween spaceBetween" draggable="false" type="button">
          <phcaretright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretright><span class="clamp text">Artist</span>
        </button>
        <!--v-if-->
      </li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Media information </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><span class="spanItem item"><button class="centerItems buttonLink alignRight globalLink globalLink" draggable="false" type="button" title="Unlike album"><phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text">Unlike album</span></button></span></li>
    </div>
  </div>
</article>"
`;

exports[`AlbumItem > when album artists is an empty array > matches the snapshot 1`] = `
"<article class="interactionWrapper layoutItem albumItem" draggable="false">
  <div class="layoutImage albumImageWrapper">
    <figure><a class="interactionWrapperLink" draggable="false" title="Go to album album-0">
        <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </a></figure>
    <div class="hideOnListLayout actions hoverActions">
      <div class="centerItems actionsLeft"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
          <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
        </button><button class="centerItems buttonLink" draggable="false" type="button" title="Add album to queue">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add album to queue </span>
        </button></div><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
        <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
      </button>
    </div>
  </div>
  <div class="layoutContent">
    <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
    <!--v-if-->
  </div>
  <div class="layoutDropdownMenu hoverActions">
    <div>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Play album </span>
        </button></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Add to queue </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem" to="[object Object]"><a class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false">
          <!--v-if--><span class="clamp text"> Go to album </span>
        </a></li>
      <!--v-if-->
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Media information </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><span class="spanItem item"><button class="centerItems buttonLink alignRight globalLink globalLink" draggable="false" type="button" title="Unlike album"><phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text">Unlike album</span></button></span></li>
    </div>
  </div>
</article>"
`;

exports[`AlbumItem > when album artists is not an empty array > when the hideArtist prop is true > matches the snapshot 1`] = `
"<article class="interactionWrapper layoutItem albumItem" draggable="false">
  <div class="layoutImage albumImageWrapper">
    <figure><a class="interactionWrapperLink" draggable="false" title="Go to album album-0">
        <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to album album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </a></figure>
    <div class="hideOnListLayout actions hoverActions">
      <div class="centerItems actionsLeft"><button class="centerItems buttonLink themeHoverButton themeHoverButton" draggable="false" type="button" title="Play album album-0">
          <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play album album-0</span>
        </button><button class="centerItems buttonLink" draggable="false" type="button" title="Add album to queue">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add album to queue </span>
        </button></div><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike album">
        <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike album</span>
      </button>
    </div>
  </div>
  <div class="layoutContent">
    <p class="mBXS strong smallFont clamp2"><a aria-label="Go to album album-0" class="layoutLink" draggable="false">album-0</a></p>
    <!--v-if-->
  </div>
  <div class="layoutDropdownMenu hoverActions">
    <div>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Play album </span>
        </button></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Add to queue </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem" to="[object Object]"><a class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false">
          <!--v-if--><span class="clamp text"> Go to album </span>
        </a></li>
      <li class="dropdownWrapper"><button class="centerItems buttonLink alignRight centerAll fullWidth spaceBetween spaceBetween" draggable="false" type="button">
          <phcaretright aria-hidden="true" class="icon" size="24" weight="regular"></phcaretright><span class="clamp text">Artist</span>
        </button>
        <!--v-if-->
      </li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
          <!--v-if--><span class="clamp text"> Media information </span>
        </button></li>
      <li aria-hidden="true" class="divider"></li>
      <li class="centerItems dropdownItem"><span class="spanItem item"><button class="centerItems buttonLink alignRight globalLink globalLink" draggable="false" type="button" title="Unlike album"><phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text">Unlike album</span></button></span></li>
    </div>
  </div>
</article>"
`;
